// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Hive Engine - Transfer (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Transfer to Account
        </div>
        <div
          className="sub-title"
        >
          Move funds to another Hive account
        </div>
      </div>
    </div>
    <form
      className="transaction-form-body"
    >
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          From
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                @
              </span>
            </div>
            <input
              className="form-control"
              readOnly={true}
              value="foo"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          To
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="suggestion"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={true}
                className="form-control"
                onChange={[Function]}
                placeholder="username"
                type="text"
                value=""
              />
            </div>
            <div />
          </div>
        </div>
      </div>
      
      
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Amount
        </label>
        <div
          className="flex items-center col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                #
              </span>
            </div>
            <input
              autoFocus={false}
              className="is-invalid form-control"
              onChange={[Function]}
              placeholder="amount"
              type="text"
              value="0.001"
            />
            <span
              className="balance-num align-self-center ml-1"
            >
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-10 offset-md-2"
        >
          <small
            className="text-danger tr-form-text form-text"
          >
            Insufficient funds
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-lg-10 offset-lg-2"
        >
          <div
            className="balance"
          >
            <span
              className="balance-label"
            >
              Balance
              : 
            </span>
            <span
              className="balance-num"
              onClick={[Function]}
            >
              0
               
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Memo
        </label>
        <div
          className="col-sm-10"
        >
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="enter your notes here"
            value=""
          />
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-10 offset-md-2"
        >
          <small
            className="text-gray-600 tr-form-text form-text"
          >
            This memo is public
          </small>
        </div>
      </div>
      
      <div
        className="form-group row"
      >
        <div
          className="col-sm-10 offset-sm-2"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(1) Hive Engine - Transfer (2) Step 2 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        2
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Confirm your transaction
        </div>
        <div
          className="sub-title"
        >
          Please, check if everything is correct
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="confirmation"
      >
        <div
          className="confirm-title"
        >
          Transfer to Account
        </div>
        <div
          className="users"
        >
          <div
            className="from-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
                }
              }
            />
          </div>
          <div
            className="arrow"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            className="to-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/bar/avatar/medium)",
                }
              }
            />
          </div>
        </div>
        <div
          className="amount"
        >
          0.001
           
          
        </div>
        
      </div>
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(1) Hive Engine - Transfer (3) Step 3 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        3
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Sign transaction
        </div>
        <div
          className="sub-title"
        >
          Sign your transaction
        </div>
      </div>
    </div>
    <div
      className="transaction-form"
    >
      <div
        className="key-or-hot"
      >
        <form
          className=""
          onSubmit={[Function]}
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7,14A2,2 0 0,1 5,12A2,2 0 0,1 7,10A2,2 0 0,1 9,12A2,2 0 0,1 7,14M12.65,10C11.83,7.67 9.61,6 7,6A6,6 0 0,0 1,12A6,6 0 0,0 7,18C9.61,18 11.83,16.33 12.65,14H17V18H21V14H23V10H12.65Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <input
              autoComplete="off"
              autoFocus={true}
              className="form-control"
              onChange={[Function]}
              placeholder="Enter active/owner/master key"
              type="password"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Sign
              </button>
            </div>
          </div>
        </form>
        <div
          className="or-divider"
        >
          OR
        </div>
        <div
          className="hs-sign"
        >
          <button
            className="btn btn-outline-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt="hivesigner"
              className="hs-logo"
              src="hive-signer.svg"
            />
             
            Sign with hivesigner
          </button>
        </div>
      </div>
      <p
        className="text-center"
      >
        <a
          href="#"
          onClick={[Function]}
        >
          Back
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`(1) Hive Engine - Transfer (4) Step 4 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        4
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Success
        </div>
        <div
          className="sub-title"
        >
          Transaction successful
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"amount\\">0.001 </span> transferred from <span class=\\"from-user\\">foo</span> to <span class=\\"to-user\\">bar</span>",
          }
        }
      />
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Finish
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) Hive Engine - Delegate (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Delegate
        </div>
        <div
          className="sub-title"
        >
          Delegate Tokens
        </div>
      </div>
    </div>
    <form
      className="transaction-form-body"
    >
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          From
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                @
              </span>
            </div>
            <input
              className="form-control"
              readOnly={true}
              value="foo"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          To
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="suggestion"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={true}
                className="form-control"
                onChange={[Function]}
                placeholder="username"
                type="text"
                value=""
              />
            </div>
            <div />
          </div>
        </div>
      </div>
      
      
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Amount
        </label>
        <div
          className="flex items-center col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                #
              </span>
            </div>
            <input
              autoFocus={true}
              className="is-invalid form-control"
              onChange={[Function]}
              placeholder="amount"
              type="text"
              value="0.001"
            />
            <span
              className="balance-num align-self-center ml-1"
            >
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-10 offset-md-2"
        >
          <small
            className="text-danger tr-form-text form-text"
          >
            Insufficient funds
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-lg-10 offset-lg-2"
        >
          <div
            className="balance"
          >
            <span
              className="balance-label"
            >
              Balance
              : 
            </span>
            <span
              className="balance-num"
              onClick={[Function]}
            >
              0
               
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <div
          className="col-sm-10 offset-sm-2"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(2) Hive Engine - Delegate (2) Step 2 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        2
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Confirm your transaction
        </div>
        <div
          className="sub-title"
        >
          Please, check if everything is correct
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="confirmation"
      >
        <div
          className="confirm-title"
        >
          Delegate
        </div>
        <div
          className="users"
        >
          <div
            className="from-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
                }
              }
            />
          </div>
          <div
            className="arrow"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            className="to-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/bar/avatar/medium)",
                }
              }
            />
          </div>
        </div>
        <div
          className="amount"
        >
          0.001
           
          
        </div>
        <div
          className="memo"
        >
          HE - Delegate
        </div>
      </div>
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) Hive Engine - Delegate (4) Step 4 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        4
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Success
        </div>
        <div
          className="sub-title"
        >
          Transaction successful
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"amount\\">0.001 </span> delegated from <span class=\\"from-user\\">foo</span> to <span class=\\"to-user\\">bar</span>",
          }
        }
      />
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Finish
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(3) Hive Engine - Undelegate (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Undelegate
        </div>
        <div
          className="sub-title"
        >
          Undelegate Tokens to add them back to your Hive Engine balance
        </div>
      </div>
    </div>
    <form
      className="transaction-form-body"
    >
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          From
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="suggestion"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={true}
                className="form-control"
                onChange={[Function]}
                placeholder="username"
                type="text"
                value=""
              />
            </div>
            <div />
          </div>
        </div>
      </div>
      
      
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Amount
        </label>
        <div
          className="flex items-center col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                #
              </span>
            </div>
            <input
              autoFocus={true}
              className="is-invalid form-control"
              onChange={[Function]}
              placeholder="amount"
              type="text"
              value="0.001"
            />
            <span
              className="balance-num align-self-center ml-1"
            >
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-10 offset-md-2"
        >
          <small
            className="text-danger tr-form-text form-text"
          >
            Insufficient funds
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-lg-10 offset-lg-2"
        >
          <div
            className="balance"
          >
            <span
              className="balance-label"
            >
              Balance
              : 
            </span>
            <span
              className="balance-num"
              onClick={[Function]}
            >
              0
               
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <div
          className="col-sm-10 offset-sm-2"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(3) Hive Engine - Undelegate (2) Step 2 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        2
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Confirm your transaction
        </div>
        <div
          className="sub-title"
        >
          Please, check if everything is correct
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="confirmation"
      >
        <div
          className="confirm-title"
        >
          Undelegate
        </div>
        <div
          className="users"
        >
          <div
            className="from-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
                }
              }
            />
          </div>
          <div
            className="arrow"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            className="to-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/bar/avatar/medium)",
                }
              }
            />
          </div>
        </div>
        <div
          className="amount"
        >
          0.001
           
          
        </div>
        
      </div>
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(3) Hive Engine - Undelegate (4) Step 4 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        4
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Success
        </div>
        <div
          className="sub-title"
        >
          Transaction successful
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"amount\\">0.001 </span> undelegated from <span class=\\"from-user\\">foo</span> to <span class=\\"to-user\\">bar</span>",
          }
        }
      />
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Finish
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(4) Hive Engine - Stake (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Stake token
        </div>
        <div
          className="sub-title"
        >
          Stake token to earn passive rewards
        </div>
      </div>
    </div>
    <form
      className="transaction-form-body"
    >
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          From
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                @
              </span>
            </div>
            <input
              className="form-control"
              readOnly={true}
              value="foo"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          To
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="suggestion"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={true}
                className="form-control"
                onChange={[Function]}
                placeholder="username"
                type="text"
                value=""
              />
            </div>
            <div />
          </div>
        </div>
      </div>
      
      
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Amount
        </label>
        <div
          className="flex items-center col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                #
              </span>
            </div>
            <input
              autoFocus={true}
              className="is-invalid form-control"
              onChange={[Function]}
              placeholder="amount"
              type="text"
              value="0.001"
            />
            <span
              className="balance-num align-self-center ml-1"
            >
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-10 offset-md-2"
        >
          <small
            className="text-danger tr-form-text form-text"
          >
            Insufficient funds
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-lg-10 offset-lg-2"
        >
          <div
            className="balance"
          >
            <span
              className="balance-label"
            >
              Balance
              : 
            </span>
            <span
              className="balance-num"
              onClick={[Function]}
            >
              0
               
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <div
          className="col-sm-10 offset-sm-2"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(4) Hive Engine - Stake (2) Step 2 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        2
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Confirm your transaction
        </div>
        <div
          className="sub-title"
        >
          Please, check if everything is correct
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="confirmation"
      >
        <div
          className="confirm-title"
        >
          Stake token
        </div>
        <div
          className="users"
        >
          <div
            className="from-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
                }
              }
            />
          </div>
          <div
            className="arrow"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            className="to-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/bar/avatar/medium)",
                }
              }
            />
          </div>
        </div>
        <div
          className="amount"
        >
          0.001
           
          
        </div>
        
      </div>
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(4) Hive Engine - Stake (4) Step 4 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        4
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Success
        </div>
        <div
          className="sub-title"
        >
          Transaction successful
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"amount\\">0.001 </span> staked from <span class=\\"from-user\\">foo</span> to <span class=\\"to-user\\">bar</span>",
          }
        }
      />
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Finish
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(5) Hive Engine - Unstake (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Unstake token
        </div>
        <div
          className="sub-title"
        >
          Unstake token you will stop earning passive rewards
        </div>
      </div>
    </div>
    <form
      className="transaction-form-body"
    >
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          From
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                @
              </span>
            </div>
            <input
              className="form-control"
              readOnly={true}
              value="foo"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Amount
        </label>
        <div
          className="flex items-center col-sm-10"
        >
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            >
              <span
                className="input-group-text"
              >
                #
              </span>
            </div>
            <input
              autoFocus={true}
              className="is-invalid form-control"
              onChange={[Function]}
              placeholder="amount"
              type="text"
              value="0.001"
            />
            <span
              className="balance-num align-self-center ml-1"
            >
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-10 offset-md-2"
        >
          <small
            className="text-danger tr-form-text form-text"
          >
            Insufficient funds
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-lg-10 offset-lg-2"
        >
          <div
            className="balance"
          >
            <span
              className="balance-label"
            >
              Balance
              : 
            </span>
            <span
              className="balance-num"
              onClick={[Function]}
            >
              0
               
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <div
          className="col-sm-10 offset-sm-2"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(5) Hive Engine - Unstake (2) Step 2 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        2
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Confirm your transaction
        </div>
        <div
          className="sub-title"
        >
          Please, check if everything is correct
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="confirmation"
      >
        <div
          className="confirm-title"
        >
          Unstake token
        </div>
        <div
          className="users"
        >
          <div
            className="from-user"
          >
            <span
              className="user-avatar large"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
                }
              }
            />
          </div>
        </div>
        <div
          className="amount"
        >
          0.001
           
          
        </div>
        
      </div>
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(5) Hive Engine - Unstake (4) Step 4 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transaction-form"
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        4
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Success
        </div>
        <div
          className="sub-title"
        >
          Transaction successful
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body"
    >
      <div
        className="success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"amount\\">0.001 </span> unstaked from <span class=\\"from-user\\">foo</span> to <span class=\\"to-user\\">bar</span>",
          }
        }
      />
      <div
        className="flex justify-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Finish
        </button>
      </div>
    </div>
  </div>
</div>
`;
